<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/llContentAccount"
              xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_margin="20dp"
              android:background="@color/talento"
              android:orientation="vertical"
              android:padding="20dp">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/acount_name"/>

    <TextView
        android:id="@+id/tvAlias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/acount_alias"/>

    <TextView
        android:id="@+id/tvIban"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/acount_iban"/>

    <TextView
        android:id="@+id/tvBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/acount_balance"/>

    <TextView
        android:id="@+id/tvType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/acount_type"/>

</LinearLayout>